[gd_scene load_steps=8 format=3 uid="uid://yt8ognp4raow"]

[ext_resource type="Script" path="res://scenes/ui/game.gd" id="1_eleug"]
[ext_resource type="PackedScene" uid="uid://dwee5a4nroc6w" path="res://scenes/world.tscn" id="2_6oojn"]
[ext_resource type="PackedScene" uid="uid://ftdtgk17m5yy" path="res://scenes/ui/day_night_panel.tscn" id="3_dfwjs"]
[ext_resource type="PackedScene" uid="uid://bh8pj4pnorf2x" path="res://scenes/ui/tools_panel.tscn" id="4_cj2n2"]
[ext_resource type="PackedScene" uid="uid://55pp0lx1omi6" path="res://scenes/ui/inventory.tscn" id="5_mp8or"]
[ext_resource type="Script" path="res://scenes/ui/inventory_ui.gd" id="5_wwbow"]
[ext_resource type="PackedScene" uid="uid://cjfyuvxmw6d82" path="res://scenes/ui/slot.tscn" id="7_4mk3e"]

[node name="Game" type="Node" node_paths=PackedStringArray("level_container", "ui", "ip_line_edit", "status_label", "not_connected_ui", "host_ui", "on_game_ui")]
script = ExtResource("1_eleug")
level_container = NodePath("Level")
level_scene = ExtResource("2_6oojn")
ui = NodePath("UI")
ip_line_edit = NodePath("UI/NotConnected/HBoxContainer/TextEdit")
status_label = NodePath("UI/StatusLabel")
not_connected_ui = NodePath("UI/NotConnected")
host_ui = NodePath("UI/Host")
on_game_ui = NodePath("CanvasLayer/OnGame")

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/world.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NotConnected" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/NotConnected"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Host" type="Button" parent="UI/NotConnected/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="UI/NotConnected/HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="TextEdit" type="LineEdit" parent="UI/NotConnected/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "127.0.0.1"

[node name="Host" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Host"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Start" type="Button" parent="UI/Host/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OnGame" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayNightPanel" parent="CanvasLayer/OnGame" instance=ExtResource("3_dfwjs")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 88.0

[node name="ToolsPanel" parent="CanvasLayer/OnGame" instance=ExtResource("4_cj2n2")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 88.0
offset_bottom = 0.0
grow_vertical = 0

[node name="InventoryUI" type="Control" parent="CanvasLayer/OnGame"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_wwbow")

[node name="PlayerInventory" parent="CanvasLayer/OnGame/InventoryUI" instance=ExtResource("5_mp8or")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrabbedSlot" parent="CanvasLayer/OnGame/InventoryUI" instance=ExtResource("7_4mk3e")]
visible = false
layout_mode = 0

[connection signal="pressed" from="UI/NotConnected/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/NotConnected/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="UI/Host/HBoxContainer/Start" to="." method="_on_start_pressed"]
